--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -67,7 +67,7 @@ jobs:
 
     steps:
       - name: Checkout files
-        uses: jhudsl/OTTR_Actions/./report_maker/action.yml
+        uses: jhudsl/OTTR_Actions/./report_maker/report-maker.yml@d7f4262618dc5222963629a17fa0f622402c9f58
           inputs:
             name: "Spelling error"
               default: Report
