--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -67,8 +67,8 @@ jobs:
 
     steps:
       - name: Checkout files
-        uses: jhudsl/OTTR_Actions/./report_maker/report-maker.yml@d7f4262618dc5222963629a17fa0f622402c9f58
-          name: "Spelling error"
+        uses: jhudsl/OTTR_Actions/./report_maker/report-maker.yml@fd34011441d963a496096c22fa2a63afc0c4cac0
+          report_name: "Spelling error"
           report_path: "resources/spell_check_results.tsv"
           script: "scripts/spell-check.R"
           docker_image:
