--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -67,6 +67,11 @@ jobs:
 
     steps:
       - name: Checkout files
+        uses: actions/checkout@v2
+        with:
+          fetch-depth: 0
+
+      - name: Run step
         uses: ./.github/report-maker.yml
 
   style-code:
