Get rid of the yaml part?

--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -72,7 +72,7 @@ jobs:
           fetch-depth: 0
 
       - name: Run step
-        uses: ./.github/report-maker.yml
+        uses: ./.github/report-maker
 
   style-code:
     name: Style code
