--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -60,19 +60,8 @@ jobs:
   spell-check:
     name: Check spelling
     needs: yaml-check
-    runs-on: ubuntu-latest
     if: ${{needs.yaml-check.outputs.toggle_spell_check == 'yes'}}
-    container:
-      image: jhudsl/course_template:main
-
-    steps:
-      - name: Checkout files
-        uses: actions/checkout@v2
-        with:
-          fetch-depth: 0
-
-      - name: Run step
-        uses: ./.github/report-maker
+    uses: ./.github/workflows/report-maker.yml  
 
   style-code:
     name: Style code
