--- a/.github/workflows/report-maker.yml
+++ b/.github/workflows/report-maker.yml
@@ -4,31 +4,16 @@ name: Run error checker
 
 on:
   workflow_call:
-    inputs:
-      report_name:
-        default: Report
-      report_path:
-        required: true
-        type: string
-      script:
-        required: true
-        type: string
-      docker_image:
-      fail_threshold: 0
-      success_message: "Test passed!"
-      fail_message: "Test failed."
-      body_includes: spelling_errors
-    secrets:
-      GH_PAT:
-        required: true
 
 jobs:
 
-  run-report:
-    name: ${{ inputs.name }}
+  spell-check:
+    name: Check spelling
+    needs: yaml-check
     runs-on: ubuntu-latest
+    if: ${{needs.yaml-check.outputs.toggle_spell_check == 'yes'}}
     container:
-      image: ${{ inputs.docker_image }}
+      image: jhudsl/course_template:main
 
     steps:
       - name: Checkout files
@@ -40,45 +25,41 @@ jobs:
         run: |
           git config --local user.email "itcrtrainingnetwork@gmail.com"
           git config --local user.name "jhudsl-robot"
-
           branch_name='preview-${{ github.event.pull_request.number }}'
           git fetch --all
           git checkout $branch_name
           git merge -s recursive --strategy-option=theirs origin/${{ github.head_ref }} --allow-unrelated-histories
         shell: bash
 
-      - name: Run the report
-        id: check_run
+      - name: Run spell check
+        id: spell_check_run
         run: |
-          results=$(Rscript ${{ inputs.script }})
-          echo "::set-output name=results::$results"
-
+          results=$(Rscript "scripts/spell-check.R")
+          echo "::set-output name=sp_chk_results::$results"
       - name: Archive spelling errors
-        if: ${{ steps.check_run.outputs.results > ${{ inputs.fail_threshold }} }}
+        if: ${{ steps.spell_check_run.outputs.sp_chk_results > 0 }}
         uses: actions/upload-artifact@v2
         with:
-          name: report-results
-          path: ${{ inputs.report_path }}
+          name: spell-check-results
+          path: resources/spell_check_results.tsv
 
-      - name: Commit error report
+      - name: Commit spell check errors
         run: |
           branch_name='preview-${{ github.event.pull_request.number }}'
-          git add --force ${{ inputs.report_path }} || echo "No changes to commit"
-          git commit -m 'Add error check file' || echo "No changes to commit"
+          git add --force resources/spell_check_results.tsv || echo "No changes to commit"
+          git commit -m 'Add spell check file' || echo "No changes to commit"
           git pull --set-upstream origin $branch_name --allow-unrelated-histories --strategy-option=ours
           git push --force origin $branch_name || echo "No changes to commit"
-
       - name: Build components of the spell check comment
         id: build-components
         env:
           GH_PAT: ${{ secrets.GH_PAT }}
         run: |
           branch_name='preview-${{ github.event.pull_request.number }}'
-          error_url=https://raw.githubusercontent.com/${GITHUB_REPOSITORY}/$branch_name/${{ inputs.report_path }}
+          sp_error_url=https://raw.githubusercontent.com/${GITHUB_REPOSITORY}/$branch_name/resources/spell_check_results.tsv
           echo ::set-output name=time::$(date +'%Y-%m-%d')
           echo ::set-output name=commit_id::$GITHUB_SHA
-          echo ::set-output name=error_url::$error_url
-
+          echo ::set-output name=sp_error_url::$sp_error_url
       # Handle the commenting
       - name: Find Comment
         uses: peter-evans/find-comment@v1
@@ -86,31 +67,31 @@ jobs:
         with:
           issue-number: ${{ github.event.pull_request.number }}
           comment-author: 'github-actions[bot]'
-          body-includes: errors report
+          body-includes: spelling errors
 
-      - name: Errors!
-        if: ${{ steps.check_run.outputs.results >= ${{ inputs.fail_threshold }} }}
+      - name: Spelling errors!
+        if: ${{ steps.spell_check_run.outputs.sp_chk_results >= 3 }}
         uses: peter-evans/create-or-update-comment@v1
         with:
           comment-id: ${{ steps.fc.outputs.comment-id }}
           issue-number: ${{ github.event.pull_request.number }}
           body: |
-            ${{ inputs.fail_message }}!
-            [Download the error report here.](${{ steps.build-components.outputs.error_url }})
+            :warning: There are spelling errors that need to be addressed. [Read this guide for more info](https://github.com/jhudsl/OTTR_Template/wiki/Spell-check).
+            [Download the errors here.](${{ steps.build-components.outputs.sp_error_url }})
             _Comment updated at ${{ steps.build-components.outputs.time }} with changes from ${{ steps.build-components.outputs.commit_id }}_
           edit-mode: replace
 
-      - name: Check results - fail if too many errors
-        if: ${{ steps.check_run.outputs.results >= ${{ inputs.fail_threshold }} }}
+      - name: Check spell check results - fail if too many errors
+        if: ${{ steps.spell_check_run.outputs.sp_chk_results >= 3 }}
         run: exit 1
 
-      - name: No errors
-        if: ${{ steps.check_run.outputs.results < ${{ inputs.fail_threshold }} }}
+      - name: No spelling errors
+        if: ${{ steps.spell_check_run.outputs.sp_chk_results < 3 }}
         uses: peter-evans/create-or-update-comment@v1
         with:
           comment-id: ${{ steps.fc.outputs.comment-id }}
           issue-number: ${{ github.event.pull_request.number }}
           body: |
-            ${{ inputs.success_message }}! :tada:
+            No spelling errors! :tada:
             _Comment updated at ${{ steps.build-components.outputs.time }} with changes from ${{ steps.build-components.outputs.commit_id }}_
           edit-mode: replace
