--- a/.github/workflows/report-maker.yml
+++ b/.github/workflows/report-maker.yml
@@ -4,6 +4,10 @@ name: Run error checker
 
 on:
   workflow_call:
+    inputs:
+      docker_image:
+        default: jhudsl/course_template:main
+        string: TRUE
 
 jobs:
 
@@ -11,7 +15,7 @@ jobs:
     name: Check spelling
     runs-on: ubuntu-latest
     container:
-      image: jhudsl/course_template:main
+      image: ${{ inputs.docker_image }}
 
     steps:
       - name: Checkout files
