--- a/.github/workflows/report-maker.yml
+++ b/.github/workflows/report-maker.yml
@@ -8,11 +8,14 @@ on:
       docker_image:
         default: jhudsl/course_template:main
         type: string
-
+      error_name:
+        default: " "
+        type: string
+      error_min:
+        default: 0
 jobs:
 
-  spell-check:
-    name: Check spelling
+  error-check:
     runs-on: ubuntu-latest
     container:
       image: ${{ inputs.docker_image }}
@@ -27,6 +30,7 @@ jobs:
         run: |
           git config --local user.email "itcrtrainingnetwork@gmail.com"
           git config --local user.name "jhudsl-robot"
+
           branch_name='preview-${{ github.event.pull_request.number }}'
           git fetch --all
           git checkout $branch_name
@@ -34,12 +38,13 @@ jobs:
         shell: bash
 
       - name: Run spell check
-        id: spell_check_run
+        id: check_run
         run: |
           results=$(Rscript "scripts/spell-check.R")
-          echo "::set-output name=sp_chk_results::$results"
-      - name: Archive spelling errors
-        if: ${{ steps.spell_check_run.outputs.sp_chk_results > 0 }}
+          echo "::set-output name=chk_results::$results"
+
+      - name: Archive errors
+        if: ${{ steps.check_run.outputs.chk_results > ${{ inputs.error_min }} }}
         uses: actions/upload-artifact@v2
         with:
           name: spell-check-results
@@ -52,16 +57,18 @@ jobs:
           git commit -m 'Add spell check file' || echo "No changes to commit"
           git pull --set-upstream origin $branch_name --allow-unrelated-histories --strategy-option=ours
           git push --force origin $branch_name || echo "No changes to commit"
+
       - name: Build components of the spell check comment
         id: build-components
         env:
           GH_PAT: ${{ secrets.GH_PAT }}
         run: |
           branch_name='preview-${{ github.event.pull_request.number }}'
-          sp_error_url=https://raw.githubusercontent.com/${GITHUB_REPOSITORY}/$branch_name/resources/spell_check_results.tsv
+          error_url=https://raw.githubusercontent.com/${GITHUB_REPOSITORY}/$branch_name/resources/spell_check_results.tsv
           echo ::set-output name=time::$(date +'%Y-%m-%d')
           echo ::set-output name=commit_id::$GITHUB_SHA
-          echo ::set-output name=sp_error_url::$sp_error_url
+          echo ::set-output name=error_url::$error_url
+
       # Handle the commenting
       - name: Find Comment
         uses: peter-evans/find-comment@v1
@@ -69,31 +76,31 @@ jobs:
         with:
           issue-number: ${{ github.event.pull_request.number }}
           comment-author: 'github-actions[bot]'
-          body-includes: spelling errors
+          body-includes: ${{ inputs.error_name }}
 
-      - name: Spelling errors!
-        if: ${{ steps.spell_check_run.outputs.sp_chk_results >= 3 }}
+      - name: There are errors!
+        if: ${{ steps.check_run.outputs.chk_results >= ${{ inputs.error_min }} }}
         uses: peter-evans/create-or-update-comment@v1
         with:
           comment-id: ${{ steps.fc.outputs.comment-id }}
           issue-number: ${{ github.event.pull_request.number }}
           body: |
-            :warning: There are spelling errors that need to be addressed. [Read this guide for more info](https://github.com/jhudsl/OTTR_Template/wiki/Spell-check).
-            [Download the errors here.](${{ steps.build-components.outputs.sp_error_url }})
+            :warning: There are ${{ inputs.error_name }} errors that need to be addressed. [Read this guide for more info](https://github.com/jhudsl/OTTR_Template/wiki/Spell-check).
+            [Download the errors here.](${{ steps.build-components.outputs.error_url }})
             _Comment updated at ${{ steps.build-components.outputs.time }} with changes from ${{ steps.build-components.outputs.commit_id }}_
           edit-mode: replace
 
-      - name: Check spell check results - fail if too many errors
-        if: ${{ steps.spell_check_run.outputs.sp_chk_results >= 3 }}
+      - name: Check check results - fail if too many errors
+        if: ${{ steps.check_run.outputs.chk_results >= ${{ inputs.error_min }} }}
         run: exit 1
 
-      - name: No spelling errors
-        if: ${{ steps.spell_check_run.outputs.sp_chk_results < 3 }}
+      - name: No errors
+        if: ${{ steps.check_run.outputs.chk_results < ${{ inputs.error_min }} }}
         uses: peter-evans/create-or-update-comment@v1
         with:
           comment-id: ${{ steps.fc.outputs.comment-id }}
           issue-number: ${{ github.event.pull_request.number }}
           body: |
-            No spelling errors! :tada:
+            No ${{ inputs.error_name }} errors! :tada:
             _Comment updated at ${{ steps.build-components.outputs.time }} with changes from ${{ steps.build-components.outputs.commit_id }}_
           edit-mode: replace
