--- a/.github/workflows/report-maker.yml
+++ b/.github/workflows/report-maker.yml
@@ -56,7 +56,7 @@ jobs:
 
 ###################### Run the appropriate test ################################
       - name: URLs checker
-        if: ${{ inputs.check_type == "urls" }}
+        if: ${{ inputs.check_type == 'urls' }}
         uses: urlstechie/urlchecker-action@master
         with:
           branch: preview-${{ github.event.pull_request.number }}
@@ -69,21 +69,21 @@ jobs:
           save: ${{ steps.declare.outputs.report_path }}
 
       - name: Count URL errors
-        if: ${{ inputs.check_type == "urls" }}
-        id: url_errors
+        if: ${{ inputs.check_type == 'urls' }}
+        id: check_run
         run: |
           results=$(Rscript "scripts/url-check.R")
           echo "::set-output name=chk_results::$results"
 
       - name: Run spelling check
-        if: ${{ inputs.check_type == "spelling" }}
+        if: ${{ inputs.check_type == 'spelling' }}
         id: check_run
         run: |
           results=$(Rscript "scripts/spell-check.R")
           echo "::set-output name=chk_results::$results"
 
       - name: Run quiz check
-        if: ${{ inputs.check_type == "quiz_format" }}
+        if: ${{ inputs.check_type == 'quiz_format' }}
         id: check_run
         run: |
           Rscript -e "ottrpal::check_quizzes(quiz_dir = 'quizzes', write_report = TRUE, verbose = TRUE)"
