Try to fix commenting

--- a/.github/workflows/report-maker.yml
+++ b/.github/workflows/report-maker.yml
@@ -31,13 +31,13 @@ jobs:
         id: declare
         run: |
           if ${{ inputs.check_type }} == "spelling" ;then
-            error_name="spelling"
+            error_name="spelling errors"
             report_path="resources/spell_check_results.tsv"
           elif ${{ inputs.check_type }} == "url" ;then
-            error_name="broken urls"
+            error_name="broken URLs"
             report_path="resources/url_checks.csv"
           elif ${{ inputs.check_type }} ==  "quiz_format" ;then
-            error_name="quiz format"
+            error_name="quiz format errors"
             report_path="resources/question_error_report.tsv"
           fi
           echo "::set-output name=error_name::$error_name"
@@ -125,7 +125,7 @@ jobs:
           comment-id: ${{ steps.fc.outputs.comment-id }}
           issue-number: ${{ github.event.pull_request.number }}
           body: |
-            :warning: There are ${{ steps.declare.outputs.error_name }} errors that need to be addressed. [Read this guide for more info](https://github.com/jhudsl/OTTR_Template/wiki/Spell-check).
+            :warning: There are ${{ steps.declare.outputs.error_name }} that need to be addressed. [Read this guide for more info](https://github.com/jhudsl/OTTR_Template/wiki/Spell-check).
             [Download the errors here.](${{ steps.build-components.outputs.error_url }})
             _Comment updated at ${{ steps.build-components.outputs.time }} with changes from ${{ steps.build-components.outputs.commit_id }}_
           edit-mode: replace
@@ -141,6 +141,6 @@ jobs:
           comment-id: ${{ steps.fc.outputs.comment-id }}
           issue-number: ${{ github.event.pull_request.number }}
           body: |
-            No ${{ steps.declare.outputs.error_name }} errors! :tada:
+            No ${{ steps.declare.outputs.error_name }}! :tada:
             _Comment updated at ${{ steps.build-components.outputs.time }} with changes from ${{ steps.build-components.outputs.commit_id }}_
           edit-mode: replace
