--- a/.github/workflows/report-maker.yml
+++ b/.github/workflows/report-maker.yml
@@ -30,16 +30,17 @@ jobs:
       - name: Declare variables
         id: declare
         run: |
-          spelling="spelling"
-          urls="urls"
-          quiz_format="quiz_format"
-          if "${{inputs.check_type}}" == "$spelling" ;then
+          spelling_string="spelling"
+          urls_string="urls"
+          quiz_format_string="quiz_format"
+
+          if "${{inputs.check_type}}" == $spelling_string ;then
             error_name='spelling errors'
             report_path='resources/spell_check_results.tsv'
-          elif "${{inputs.check_type}}" == "$urls" ;then
+          elif "${{inputs.check_type}}" == $urls_string ;then
             error_name='broken URLs'
             report_path='resources/url_checks.csv'
-          elif "${{inputs.check_type}}" ==  "$quiz_format" ;then
+          elif "${{inputs.check_type}}" ==  $quiz_format_string ;then
             error_name='quiz format errors'
             report_path='resources/question_error_report.tsv'
           fi
