--- a/.github/workflows/report-maker.yml
+++ b/.github/workflows/report-maker.yml
@@ -7,7 +7,6 @@ on:
     inputs:
       check_type:
         required: true
-        type: string
       error_min:
         default: 0
         type: number
@@ -34,13 +33,13 @@ jobs:
           urls_string="urls"
           quiz_format_string="quiz_format"
 
-          if "${{inputs.check_type}}" == "spelling" ;then
+          if "$inputs.check_type" == 'spelling' ;then
             error_name='spelling errors'
             report_path='resources/spell_check_results.tsv'
-          elif "${{inputs.check_type}}" == "urls_string" ;then
+          elif "inputs.check_type" == 'urls' ;then
             error_name='broken URLs'
             report_path='resources/url_checks.csv'
-          elif "${{inputs.check_type}}" ==  "quiz_format" ;then
+          elif "$inputs.check_type" ==  'quiz_format' ;then
             error_name='quiz format errors'
             report_path='resources/question_error_report.tsv'
           fi
