--- a/.github/workflows/report-maker.yml
+++ b/.github/workflows/report-maker.yml
@@ -7,6 +7,7 @@ on:
     inputs:
       check_type:
         required: true
+        type: string
       error_min:
         default: 0
         type: number
