--- a/.github/workflows/starting-course.yml
+++ b/.github/workflows/starting-course.yml
@@ -30,6 +30,7 @@ jobs:
         run: |
           # Cleanup
           rm -rf \
+            .github/workflows/report-maker.yml \
             .github/workflows/send-updates.yml \
             .github/workflows/test-send-updates.yml \
             .github/sync.yml \
