Get rid of straggling quote

--- a/.github/workflows/report-maker.yml
+++ b/.github/workflows/report-maker.yml
@@ -71,7 +71,7 @@ jobs:
       - name: Count URL errors
         if: ${{ inputs.check_type == 'urls' }}
         run: |
-          chk_results=$(Rscript scripts/url-check.R)"
+          chk_results=$(Rscript scripts/url-check.R)
           chk_results="$((chk_results-1))"
           echo "chk_results=$chk_results" >> $GITHUB_ENV
 
