--- a/.github/workflows/report-maker.yml
+++ b/.github/workflows/report-maker.yml
@@ -57,7 +57,7 @@ jobs:
 
       - name: URLs checker
         if: ${{ inputs.check_type == 'urls' }}
-        uses: urlstechie/urlchecker-action@master
+        uses: urlstechie/urlchecker-action@0.0.25 
         with:
           branch: preview-${{ github.event.pull_request.number }}
           cleanup: false
