specify git_path

--- a/.github/workflows/report-maker.yml
+++ b/.github/workflows/report-maker.yml
@@ -57,8 +57,9 @@ jobs:
 
       - name: URLs checker
         if: ${{ inputs.check_type == 'urls' }}
-        uses: urlstechie/urlchecker-action@0.0.25 
+        uses: urlstechie/urlchecker-action@0.0.25
         with:
+          git_path: https://github.com/${GITHUB_REPOSITORY}
           branch: preview-${{ github.event.pull_request.number }}
           cleanup: false
           file_types: .Rmd,.md
