--- a/.github/workflows/report-maker.yml
+++ b/.github/workflows/report-maker.yml
@@ -35,7 +35,7 @@ jobs:
             report_path='resources/url_checks.csv'
           elif ${{inputs.check_type ==  'quiz_format'}} ;then
             error_name='Quiz format errors'
-            report_path='resources/question_error_report.tsv'
+            report_path='question_error_report.tsv'
           fi
           echo $error_name
           echo $report_path
