--- a/.github/workflows/report-maker.yml
+++ b/.github/workflows/report-maker.yml
@@ -64,6 +64,7 @@ jobs:
           print_all: false
           force_pass: true
           exclude_urls: https://jhudatascience.org/{Course_Name}}
+          exclude_files: docs,manuscript
           save: resources/url_checks.csv
 
       - name: Count URL errors
