Try out new github action

--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -62,28 +62,28 @@ jobs:
     name: Check spelling
     needs: yaml-check
     if: ${{needs.yaml-check.outputs.toggle_spell_check == 'yes'}}
-    uses: jhudsl/OTTR_Template/.github/workflows/report-maker.yml@main
-    with:
-      check_type: "spelling"
-      error_min: 3
+    uses: jhudsl/error-reports-commenting@main
+      with:
+        check_type: spelling
+        error_min: 3
 
   url-check:
     name: Check URLs
     needs: yaml-check
     if: ${{needs.yaml-check.outputs.toggle_url_check == 'yes'}}
-    uses: jhudsl/OTTR_Template/.github/workflows/report-maker.yml@main
-    with:
-      check_type: "urls"
-      error_min: 0
+    uses: jhudsl/error-reports-commenting@main
+      with:
+        check_type: urls
+        error_min: 0
 
   quiz-check:
     name: Check quiz formatting
     if: ${{needs.yaml-check.outputs.toggle_quiz_check == 'yes'}}
     needs: yaml-check
-    uses: jhudsl/OTTR_Template/.github/workflows/report-maker.yml@main
-    with:
-      check_type: "quiz_format"
-      error_min: 0
+    uses: jhudsl/error-reports-commenting@main
+      with:
+        check_type: quiz_format
+        error_min: 0
 
 ############################# Style the code ###################################
   style-code:
