--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -66,6 +66,8 @@ jobs:
     with:
       check_type: spelling
       error_min: 3
+    secrets:
+      gh_pat: ${{ secrets.GH_PAT }}
 
   url-check:
     name: Check URLs
@@ -75,6 +77,8 @@ jobs:
     with:
       check_type: urls
       error_min: 0
+    secrets:
+      gh_pat: ${{ secrets.GH_PAT }}
 
   quiz-check:
     name: Check quiz formatting
@@ -84,7 +88,9 @@ jobs:
     with:
       check_type: quiz_format
       error_min: 0
-
+    secrets:
+      gh_pat: ${{ secrets.GH_PAT }}
+      
 ############################# Style the code ###################################
   style-code:
     name: Style code
